sync's with recent text edits in pdf article

--- a/docs/bayesian_refs.bib
+++ b/docs/bayesian_refs.bib
@@ -1,3 +1,46 @@
+@article{PhysRevC.55.1650,
+  title = {Separable $\mathrm{NN}$ potentials from inverse scattering for nuclear matter studies},
+  author = {Kwong, N. H. and K\"ohler, H. S.},
+  journal = {Phys. Rev. C},
+  volume = {55},
+  issue = {4},
+  pages = {1650--1664},
+  numpages = {0},
+  year = {1997},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.55.1650},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.55.1650}
+}
+
+@article{Semposki:2022gcp,
+    author = "Semposki, A. C. and Furnstahl, R. J. and Phillips, D. R.",
+    title = "{Interpolating between small- and large-g expansions using Bayesian model mixing}",
+    eprint = "2206.04116",
+    archivePrefix = "arXiv",
+    primaryClass- = "nucl-th",
+    doi = "10.1103/PhysRevC.106.044002",
+    journal = "Phys. Rev. C",
+    volume = "106",
+    number = "4",
+    pages = "044002",
+    year = "2022"
+}
+
+@article{Boehnlein:2021eym,
+    author = {Boehnlein, Amber and Diefenthaler, Markus and Sato, Nobuo and Schram, Malachi and Ziegler, Veronique and Fanelli, Cristiano and Hjorth-Jensen, Morten and Horn, Tanja and Kuchera, Michelle P. and Lee, Dean and Nazarewicz, Witold and Ostroumov, Peter and Orginos, Kostas and Poon, Alan and Wang, Xin-Nian and Scheinker, Alexander and Smith, Michael S. and Pang, Long-Gang},
+    title = "{Colloquium: Machine learning in nuclear physics}",
+    eprint = "2112.02309",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/RevModPhys.94.031003",
+    journal = "Rev. Mod. Phys.",
+    volume = "94",
+    number = "3",
+    pages = "031003",
+    year = "2022"
+}
+
 @article{0954-3899-42-3-030301,
   author={D G Ireland and W Nazarewicz},
   title={Enhancing the interaction between nuclear experiment and theory through information and statistics},
