--- a/docs/scattering-emulators.qmd
+++ b/docs/scattering-emulators.qmd
@@ -34,10 +34,13 @@ For example, UQ for the RBM has been well studied, along with the development of
 | Schwinger  | $\begin{aligned} \braket{\trial\psi | V | \phi} + \braket{\phi | V | \trial\psi} \\ - \braket{\trial\psi | V - V G_0 V | \trial\psi} \end{aligned}$  |  $\ket{\psi} = \ket{\phi} + G_0 V\ket{\psi}$  | $\ket{\psi_i}$ | $\bra{\psi_i}$ | No  |
 | Newton  | $\begin{aligned} V + V G_0 \trial K + \trial K G_0 V \\  - \trial K G_0 \trial K + \trial K G_0 V G_0 \trial K \end{aligned}$  | $K = V + VG_0 K$  |  $K_i$ |  $K_i$  |  No |
 
-Table: Description of common variational principles (VPs) in quantum scattering, and how to relate them to a Galerkin projection. The quantities are defined as the free wave function $\ket{\phi}$, the full wave function $\ket{\psi}$, the scattered wave function $\ket{\chi}$, and the reactance matrix $K$ along with its on-shell form $K_E$. Tildes denote trial quantities. The expressions for the Newton VP are written in operator rather than scalar form; each component is individually stationary when projected between arbitrary states $\bra{\phi'}$ and $\ket{\phi}$. To compute the weak form of the Schwinger and Newton VPs, one must first left multiply by $V(\params)$ and $G_0$, respectively, before orthogonalizing against the test basis. The rightmost column specifies whether a normalization constraint for the trial wave function has to be imposed (_e.g._, using a Lagrange multiplier $\lambda$). {#tbl-scattering-vps-galerkin}
+Table: Description of common variational principles (VPs) in quantum scattering, and how to relate them to a Galerkin projection. The quantities are defined as the free wave function $\ket{\phi}$, the full wave function $\ket{\psi}$, the scattered wave function $\ket{\chi}$, and the reactance matrix $K$ along with its on-shell form $K_E$. Tildes denote trial quantities.
+The expressions for the Newton VP are written in operator rather than scalar form; any matrix element can be made individually stationary (see Section @sec-newton for details).
+To compute the weak form of the Schwinger and Newton VPs, one must first left multiply by $V(\params)$ and $G_0$, respectively, before orthogonalizing against the test basis. The rightmost column specifies whether a constraint for the trial wave function has to be imposed (_e.g._, using a Lagrange multiplier $\lambda$). {#tbl-scattering-vps-galerkin}
 
 One can formulate the Schrödinger equation in multiple ways, including any flavor of Lippmann-Schwinger (LS) integral equation (which builds in boundary conditions) or as a differential equation in either homogeneous or inhomogeneous form.
 This freedom, along with the freedom of trial and test bases for the Galerkin projection, leads to multiple alternative emulators that one could construct for quantum scattering systems.
+For simplicity, we restrict our discussion to two-body scattering for Hermitian Hamiltonians. (See, however, Section @sec-higher-body-continuum for an extension to higher-body systems.
 As a concise reference, we provide Table @tbl-scattering-vps-galerkin to show the connections between the fundamental differential or integral equations, variational principles, and Galerkin projections.
 This section thus provides multiple distinct examples of using Galerkin projections to create emulators, which may prove useful to newcomers wishing to apply model reduction to their own systems, and ends with an example for an emulator applied to a separable potential.
 
@@ -63,8 +66,7 @@ $$
     \psi_\ell(r) \xrightarrow[r\to\infty]{} j_{\ell}(qr) + n_{\ell}(qr) \tan \delta_{\ell},
 \end{align}
 $$ {#eq-psi-normalization}
-where $\phi(r) = j_\ell(qr)$ is the (regular) free-space wave function, and $j_\ell(qr)$ and $n_\ell(qr)$ are spherical Bessel and Neumann functions, respectively.^[When discussing scattering emulators in this paper, we focus on examples with real potentials and without long-range Coulomb interactions.
-The other cases with complex-valued potentials and/or the Coulomb interaction may be analyzed in similar ways as laid out in this paper; relevant discussions specific to Kohn emulators can be found in References [@Furnstahl:2020abp;@Drischler:2021qoy].]
+where $\phi(r) = j_\ell(qr)$ is the (regular) free-space wave function, and $j_\ell(qr)$ and $n_\ell(qr)$ are spherical Bessel and Neumann functions, respectively.^[We focus here on examples with real-valued potentials and without long-range Coulomb interactions. Cases with complex-valued potentials and/or the Coulomb interaction may be analyzed in similar ways; relevant discussions specific to Kohn emulators can be found in References [@Furnstahl:2020abp;@Drischler:2021qoy].]
 Note that we define the on-shell $K_E$ matrix as
 $$
 \begin{equation}
@@ -91,7 +93,7 @@ Both $\phi(r)$ and $\trial\psi(r)$ vanish at $r=0$ so only the limit of $r\to\in
 
 Because the Schrödinger equation is a linear, homogeneous differential equation, the normalization of $r\psi(r)$ is proportional to its derivative at, say, $r=0$.
 Therefore, a constraint on the normalization of $\psi$ is equivalent to a boundary condition on $\psi'$.
-However, to satisfy this boundary condition we must include a constraint on Equation @eq-kohn-psi if we are to ensure that the trial function $\trial\psi$ continues to satisfy the normalization condition of Equation @eq-psi-normalization}.
+However, to satisfy this boundary condition we must include a constraint on Equation @eq-kohn-psi if we are to ensure that the trial function $\trial\psi$ continues to satisfy the normalization condition of Equation @eq-psi-normalization.
 If we assume that each snapshot $\psi_i$ satisfies Equation @eq-psi-normalization, then
 $$
 \begin{align}
@@ -120,7 +122,7 @@ In the second line we have used that the $\ket{\psi_j}$ are eigenstates with the
 If $V(\params)$ is affine in $\params$, then $\dU$ can be projected once in the emulator's offline stage, and reconstructed quickly during the online stage.
 
 Now we can follow the steps outlined in Section @sec-variational to determine $\coeffsopt$.
-Taking the gradient of Equation @eq-kohn-psi-reduced} with respect to $\coeffs$ and setting it equal to 0 yields
+Taking the gradient of Equation @eq-kohn-psi-reduced with respect to $\coeffs$ and setting it equal to 0 yields
 $$
 \begin{align} %\label{#eq-kohn-psi-gradient}
     \vec{K}_{E} + \dU \coeffsopt + \lagmult = 0,
@@ -156,7 +158,7 @@ $$
 $${#eq-kohn-psi-K-emulator}
 whose operations all occur quickly in the size-$\nbasis$ space during the online stage.
 
-The derivation above followed closely that of References [@Furnstahl:2020abp,@Drischler:2021kxf], but one could instead arrive at exactly Equation @eq-kohn-psi-coeff-solution} from a Galerkin projection [@Bonilla:2022rph].
+The derivation above followed closely that of References [@Furnstahl:2020abp,@Drischler:2021kxf], but one could instead arrive at exactly Equation @eq-kohn-psi-coeff-solution from a Galerkin projection [@Bonilla:2022rph].
 Rather than begin with the VP, we start here with (the _strong form_ of) the homogeneous Schrödinger equation, _i.e._,
 $$
 %\begin{align}
@@ -208,8 +210,8 @@ $$
 \end{align}
 $$ {#eq-kohn-weak-reduced}
 which is exactly Equation @eq-kohn-psi-gradient found by making the KVP stationary.
-This simplification can be understood by noting that if $\{\coeffsopt, \lambda_\star\}$ satisfy Equation @eq-kohn-weak-reduced-unfinished}, then we know that $\{\coeffsopt, \lambda_\star'\}$ is the unique solution to Equation @eq-kohn-weak-reduced.
-Therefore, we can solve Equation @eq-kohn-weak-reduced} to obtain $\coeffsopt$ rather than Equation @eq-kohn-weak-reduced-unfinished.
+This simplification can be understood by noting that if $\{\coeffsopt, \lambda_\star\}$ satisfy Equation @eq-kohn-weak-reduced-unfinished, then we know that $\{\coeffsopt, \lambda_\star'\}$ is the unique solution to Equation @eq-kohn-weak-reduced.
+Therefore, we can solve Equation @eq-kohn-weak-reduced to obtain $\coeffsopt$ rather than Equation @eq-kohn-weak-reduced-unfinished.
 In conclusion, the Galerkin projection of the homogeneous Schrödinger equation with trial and test bases of $\psi_i$ is equivalent to the KVP as in Equation @eq-kohn-psi.
 
 
@@ -248,11 +250,18 @@ Now we can construct the set of linear equations that makes Equation @eq-kohn-no
 By taking the gradient with respect to $\coeff_i$, we find
 $$
 \begin{align} %\label{#eq-kohn-no-lagrange-solution}
-    \braket{\chi_i | [E - H] | \chi_j}\coeff_j = \braket{\chi_i | V | \phi}% \quad \forall i \in [1, \dots, \nbasis]
+   \Omega \coeffsopt = \vec{\omega},
 \end{align}
 $${#eq-kohn-no-lagrange-solution}
-for all $i \in [1, \dots, \nbasis]$, which is the set of equations used to obtain $\coeffsopt$.
-The matrix element on the left-hand side of Equation @eq-kohn-no-lagrange-solution can be evaluated via
+where
+$$
+\begin{align} % \label
+    \Omega_{ij} & = \braket{\chi_i | [E - H] | \chi_j}, \\
+    \omega_i & = \braket{\chi_i | V | \phi},
+\end{align}
+$${#eq-kohn-unconstrained-reduced-matrices}
+which is the set of equations used to obtain $\coeffsopt$.
+The matrix elements $\Omega_{ij}$ can be evaluated with the help of
 $$
 \begin{align}
     [E - H] \ket{\chi_j} & = [E - H_j] \ket{\chi_j} + [V_j - V] \ket{\chi_j} \notag\\
@@ -290,7 +299,7 @@ $$
 \end{align}
 $$
 with the matrix $\Omega_{ij} \equiv \braket{\chi_i | E - H | \chi_j}$, and the factors in brackets equating to $\coeff_i$ using Equation @eq-kohn-no-lagrange-solution.
-The equivalence to the KVP is demonstrated in References [@Takatsuka1981SchwingerKohnRelationship;@Takatsuka1981Scattering]}.
+The equivalence to the KVP is demonstrated in References [@Takatsuka1981SchwingerKohnRelationship;@Takatsuka1981Scattering].
 
 
 ## Schwinger Emulators {#sec-schwinger}
@@ -390,6 +399,7 @@ Unlike some of the VPs discussed so far, the NVP is written here in operator for
 This gives us the freedom to assert that any component $\braket{\phi' | \mathcal{K} | \phi}$ constructed from Equation @eq-nvp is stationary, which yields an emulator for $\braket{\phi' | K | \phi}$.
 For example, one could choose $\ket{\phi}$ to be a plane-wave partial-wave basis $\ket{k\ell m}$ with momentum $k$ and angular momentum quanta $(l,m)$, or one could keep the angular dependence explicit via $\ket{\phi}=\ket{\mathbf{k}}$ in a single-particle basis.
 Coupled channels could be emulated by choosing the angular momentum quanta differently between $\ket{\phi'}$ and $\ket{\phi}$.
+In fact, the NVP does not even require $\ket{\phi}$ and $\ket{\phi'}$ to be free-space states; one can impose stationarity of Equation @eq-nvp between any two states due to its operator form.
 Note that the _independent_ coefficients $\coeffs$ are found for each choice of $\ket{\phi'}$ and $\ket{\phi}$.
 Thus, in the case of coupled partial waves, for example, each channel is emulated independently.
 To compute phase shifts, we must emulate $K$ at the on-shell energy $E=q^2/2\mu$ and thus, $k = k' = q$ for $\ket{\phi}$ and $\bra{\phi'}$.
@@ -428,7 +438,7 @@ $\coeffsopt(\params)$ such that $M \coeffsopt = \vec{m}$.
 Given that the optimal $\coeffsopt(\params)$ yields a trial matrix Equation @eq-TritzTrial with an error $\delta K$, one can insert $\coeffsopt$ in Equation @eq-LS_identity_beta to obtain an error $(\delta K)^2$.
 The resulting emulator $\mathcal{K}_\star(\params) \equiv \mathcal{K}(\params, \coeffsopt)$ is then [@Melendez:2021lyq]
 $$
-\begin{equation}%\label{#eq-nvp-emulator}
+\begin{equation}
     \braket{\phi' | K  | \phi} \approx
     \braket{\phi' | \mathcal{K} | \phi} =
     \braket{\phi' | V | \phi} + \frac{1}{2} \vec{m}^\trans M^{-1} \vec{m}.
@@ -438,47 +448,41 @@ $${#eq-nvp-emulator}
 Reference [@Melendez:2021lyq] studied several applications of the emulator equation @eq-nvp-emulator to short-range potentials with and without the Coulomb interaction and partial-wave coupling.
 They demonstrated that the NVP emulator has remarkable extrapolation capabilities (see Figure 2 in Reference @Melendez:2021lyq) and can quickly reproduce high-fidelity calculations of neutron-proton cross sections based on modern chiral interactions with negligible error.
 
-We repeat the derivation for the NVP emulator, but instead from the perspective of a Galerkin projection.
-For this case we will focus on the case where $\bra{\phi'} = \bra{\phi}$.
+We now repeat the derivation for the NVP emulator, but instead from the perspective of a Galerkin projection.
+Here, we will focus on the case where $\bra{\phi'} = \bra{\phi}$.
 We start with the LS equation
 $$
-\begin{equation} %\label{#eq-LS}
-    K = V + V G_0 K = V + K G_0 V ,
+\begin{equation} %\label{eq:LS}
+    K = V + V G_0 K, % = V + K G_0 V ,
 \end{equation}
-$$ {#eq-LS}
-which in this context constitutes the strong form of the integral equation.
-To derive the weak form we left-multiply by $G_0$ and a test operator $\testfunc$:
+$${#eq-LS}
+which, in this context, constitutes the strong form of the integral equation.
+Although Equation @eq-LS is written in terms of abstract operators, it can be turned into a vector equation in a specific representation after right-multiplying by $\ket{\phi}$.
+To derive the weak form we left-multiply by $G_0$ and a test function $\bra{\testfunc}$:
 $$
 \begin{align}
-    \testfunc G_0 K & = \testfunc G_0 V + \testfunc G_0 V G_0 \trial K , \\
-    K G_0 \testfunc & = V G_0 \testfunc + \trial K G_0 V G_0 \testfunc,
+    \braket{\testfunc | G_0 K -  G_0 V G_0 K | \phi} & = \braket{\testfunc | G_0 V | \phi} .
 \end{align}
 $$
-where the second equation follows from transposing the first.
-By adding the two equations together and projecting to the $\bra{\phi}$ and $\ket{\phi}$ basis, we have
+The trial function in this case is $K\ket{\phi}$, which can be expanded in a discrete (snapshot) basis using @eq-TritzTrial.
+We further employ the Galerkin prescription, where the test basis is equivalent to the trial basis, making $\bra{\testfunc_i} = \bra{\phi} K_i$.
+With these assumptions, the reduced weak form becomes
 $$
 \begin{align}
-    \braket{\phi | \testfunc G_0 K + K G_0 \testfunc | \phi} & = \braket{\phi | \testfunc G_0 V + V G_0 \testfunc | \phi} \notag\\
-    & \!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!
-    + \braket{\phi |\testfunc G_0 V G_0 \trial K + \trial K G_0 V G_0 \testfunc | \phi}.
+    M\coeffsopt = \vec{m},
 \end{align}
 $$
-Next, we choose the test basis $\testfunc_i = K_i$ and insert the definition of the trial matrix, Equation @eq-TritzTrial, leading to
-$$
-\begin{align}
-    M\coeffsopt = m,
-\end{align}
-$$
-with $M$ and $m$ defined in Equation @eq-nvp-reduced-mat-and-vec, again with $\bra{\phi'} = \bra{\phi}$.
+with $M$ and $\vec{m}$ defined in Equation @eq-nvp-reduced-mat-and-vec, again with $\bra{\phi'} = \bra{\phi}$.
 Thus, we find the same $\coeffsopt$ using either the NVP or the Galerkin projection.
 
-Given the optimal coefficients $\coeffsopt$, the emulator Equation @eq-nvp-emulator can be derived by substituting $\trial K$ into the right-hand side of Equation @eq-LS:
+Given the optimal coefficients $\coeffsopt$, the emulator can be derived by substituting $\trial K$ into the right-hand side of Equation @eq-LS
 $$
 \begin{align}
-    \braket{\phi' | K |\phi} & \approx \braket{\phi' | V |\phi} + \frac{1}{2} \braket{\phi' | V G_0 \trial K + \trial K G_0 V |\phi} \notag\\
-    & = \braket{\phi' | V |\phi} + \frac{1}{2} \vec{m}^\trans M^{-1} \vec{m}.
+    \braket{\phi | K |\phi} & \approx \braket{\phi | V |\phi} + \braket{\phi | V G_0 \trial K |\phi} \\
+    & = \braket{\phi | V |\phi} + \frac{1}{2} \vec{m}^\trans M^{-1} \vec{m},
 \end{align}
 $$
+which is equivalent to Equation @eq-nvp-emulator under the assumption that $\bra{\phi'} = \bra{\phi}$.
 Therefore, both the NVP and Galerkin projection lead to identical emulators for the $K$ matrix.
 
 
@@ -491,7 +495,7 @@ However, other types of emulators can be constructed via Galerkin projections, e
 Starting from the Schrödinger equation---a second-order differential equation---we must impose two boundary conditions.
 The first is that $r\psi(r)$ vanishes at $r=0$; this constraint has been automatically satisfied by our choice of trial bases in all VPs considered above.
 But the second constraint is yet to be chosen.
-In the KVP, for example, the second constraint was obtained via the normalization of $r\psi(r)$ as $r\to\infty$, which led to a normalization constraint for the coefficients $\coeff_i$.
+In the KVP, for example, the second constraint was obtained via the normalization of $r\psi(r)$ as $r\to\infty$, which, in the constrained KVP, led to a normalization constraint for the coefficients $\coeff_i$.
 Because the Schrödinger equation is linear and homogeneous, this normalization condition is equivalent to imposing a constraint on the derivative of $r\psi(r)$, _e.g._, evaluated at the origin.
 
 Thus, an alternative weak form for the Schrödinger equation could be constructed using only constraints at the origin.
@@ -629,7 +633,7 @@ $$
 \end{equation}
 $$
 with $\kappa_1 = 0.5$ and $\kappa_2 = 1$.
-The six training and one validation parameters are selected randomly from a uniform distribution in the range of $[-5, 5]$.
+The six training and one validation parameters are selected randomly from a uniform distribution in the range of $[-5, 5]$ MeV.
 To obtain the snapshots, the partial-wave decomposed radial Schrödinger equation can be expressed as the system of coupled first-order differential equations,
 $$
 \begin{equation}
@@ -737,14 +741,14 @@ $$
 \end{align}
 $$
 
-Variational principles may not always provide a (unique) stationary approximation, causing the appearance of spurious singularities known as Kohn (or Schwartz) anomalies [@Drischler:2021qoy;@Lucchese:1989zz;@nesbet1980variational], which can render applications of VPs ineffective; especially for sampling of a model's parameter space.
-The appearance of these anomalies depend on the parameters $\params$ used to train the emulator in the offline stage, the scattering energy, and the evaluation set used in the online stage.
+Variational principles may not always provide a (unique) stationary approximation, causing the appearance of spurious singularities known as Kohn (or Schwartz) anomalies [@Drischler:2021qoy;@Lucchese:1989zz;@nesbet1980variational], which can render applications of VPs ineffective; especially for sampling of a model's parameter space.^[These anomalies are not restricted to the KVP but also appear in other VPs such as the NVP and SVP @ADHIKARI1991435]
+The appearance of these anomalies depends on the parameters $\params$ used to train the emulator in the offline stage, the scattering energy, and the evaluation set used in the online stage.
 However, Reference @Drischler:2021qoy demonstrated that a KVP-based emulator that simultaneously emulates an array of KVPs with different boundary conditions can be used to systematically detect and remove these anomalies.
 The anomalies can be detected by assessing the (relative) consistency of the different emulated results for, _e.g._, the scattering $S$ matrix.
 The results that do not pass the consistency check are discarded and the remaining ones averaged to obtain an anomaly-free estimate of the $S$ matrix (or any other matrix).
 If all possible consistency checks fail, one can change the basis size of the trial wave function iteratively, which typically shifts the locations of the Kohn anomalies in the parameter space in each iteration.
 The basic idea for removing Kohn anomalies is general and can be applied to other emulators, including the NVP-based emulator discussed in Section @sec-newton, as long as multiple scattering boundary conditions can be emulated independently and efficiently.
-Alternatively, one might also consider comparing the consistency of emulated results obtained from different VPs such as the ones summarized in Table @tab-scattering-vps-galerkin.
+Alternatively, one might also consider comparing the consistency of emulated results obtained from different VPs such as the ones summarized in Table @tbl-scattering-vps-galerkin.
 
 ### Generalization to coupled systems {#sec-kohn-coupled}
 
@@ -781,8 +785,7 @@ The uncoupled case is retrieved by replacing $ss' \to \ell$.
 Solving for $\coeffs$ now proceeds as in Equation @eq-kohn-psi-coeff-solution but for a specific choice of $ss'$ channels.
 Note that the coefficients $\coeffs$ are to be determined _independently_ for each $ss'$ pair.
 
-In the following discussion on the $ss'$ channel independence, we only consider the $K$-matrix, but the discussion extends to other boundary conditions (scattering matrices).
-We note that $\mathcal{K}^{ss'}$ is independently stationary for each $ss'$ pair.
+The coefficients are independent because We note that $\mathcal{LK}^{ss'}$ is independently stationary for each $ss'$ pair.} % (\ie, the coefficients $\coeffs$ are to be determined \emph{independently} for each $ss'$ pair).
 This becomes apparent when considering how one would solve for the coefficients in the case there are two uncoupled channels, where $ss' \to \ell$ in Equations @eq-kvp_reduced_coupled and @eq-delta_u_tilde_coupled.
 Here, each partial wave is completely independent of one another and thus one may not want to mix the VPs or the $\coeff$ across values of $\ell$.
 Without loss of generality, let the two channels be labeled as $\ell = 0$ and $\ell = 1$, and let $\coeffs^{(0)}$ and $\coeffs^{(1)}$ denote the independent sets of coefficients found by making each channel's KVP stationary.
@@ -859,7 +862,7 @@ $$ {#eq-separable-potential}
 where $\Lambda_{ij} = \Lambda_{ji}$ are the coefficients of the potential that will be varied during emulation.
 For simplicity, we consider here only $s$-wave scattering (_i.e._, $\ell = 0$).
 The potential @eq-separable-potential leads to an affine structure that lends itself to the offline-online decomposition discussed in Section @sec-model-reduction.
-From the potential @eq-separable-potential, simple expressions for $K$ and $\psi$ can be derived.
+From the potential @eq-separable-potential, simple expressions for $K$ and $\psi$ can be derived @PhysRevC.55.1650.
 For instance, the $K$ matrix is given in operator form by
 $$
 \begin{align}
@@ -1169,8 +1172,9 @@ Figure @fig-yamaguchi-phase-shifts shows the phase shifts and the absolute resid
 The top panel depicts the high-fidelity solution (solid black curve) and the emulator results (dots). Here, only the constrained KVP is shown because the others would be indistinguishable.
 In gray we show the basis states used to train the emulator in the offline stage.
 The bottom panel shows the absolute residuals for each of the emulators.
-We can see that each of the emulators are extremely accurate, with the residuals mostly governed by the choice of nugget used to regularize the matrix inversion.
-
+We can see that all but the constrained KVP are extremely accurate, with the residuals mostly governed by the choice of nugget used to regularize the matrix inversion (see also Section @sec-eigen-emulators_variational).
+For the constrained KVP, we see that the loss of a degree of freedom to implement the constraint significantly impacts its predictive power given that we only have two basis states, although it is still quite accurate in this case.
+Increasing the basis to $\nbasis = 5$ yields predictions that are accurate to $10^{-13}$ degrees, or better, for all emulators.
 
 Next, we investigate the emulated wavefunctions for these two emulators. For convenience, we define the helper function `plot_wave_functions()` to plot the results in a figure:
 ```{python}
@@ -1261,7 +1265,7 @@ plt.show()
 
 Figure @fig-yamaguchi-wave-functions shows the high-fidelity (solid black line), emulated (dots), and basis (solid gray line) wave functions for three values of $q$ with their absolute residuals using the constrained KVP constructed with $\nbasis=5$ training points.
 The emulator reproduces the high-fidelity solution at all three values of $q$, with $q = 2.0 \, \text{fm}^{-1}$ having the smallest residual.
-The sensitivity of the emulator accuracy as $\nbasis$ is varied can be readily studied using the Python code provided on the companion website @companionwebsite. An example is given in Reference @KVP_vs_NVP:2022.
+The sensitivity of the emulator accuracy as $\nbasis$ is varied can be readily studied using the Python code provided on the companion website @companionwebsite. An example of how the accuracy is affected when varying $\nbasis$ is also given in Refereence @KVP_vs_NVP:2022.
 
 In addition, we make the same comparision between the NVP and KVP emulators for a different potential. We choose the ${}^1S_0$ Minnesota potential:
 ```{python}
@@ -1398,7 +1402,6 @@ plt.show()
 ```
 
 While all emulators described in this Section are applicable to scattering problems in general, their efficacy will depend in practice on various factors, such as their computational complexity and the potential to be emulated.
-The constrained KVP has the advantage that the (long-range) Coulomb potential cancels in the computation of Equation @eq-delta_u_tilde but it loses one degree of freedom due to the normalization constraint of the coefficients.
+The constrained KVP has the advantage that terms constant in $\params$, such as the (long-range) Coulomb potential, cancels in the computation of Equation @eq-delta_u_tilde but it loses one degree of freedom due to the normalization constraint of the coefficients.
 On the other hand, both the NVP and SVP involve the computation of Green's functions, which makes them computationally more complex than the KVP---especially the SVP
 since it also depends quadratically on the potential.
-Since, to our knowledge, all of these VPs are susceptible to spurious singularities, having different emulators available allows one to assess the efficacy of the emulator in each application.
